# tokio-serde

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
examples/: client.rs  client_cbor.rs  client_cbor1.rs  duplex.rs  server.rs
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/futures_core/stream/: trait.Stream.js
implementors/futures_sink/: trait.Sink.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: buffer_one.rs  lib.rs
src/tokio_serde/: lib.rs.html
tokio_serde/: all.html  index.html  sidebar-items.js  struct.FramedRead.html  struct.FramedWrite.html  trait.Deserializer.html  trait.Serializer.html
