[package]
name = "tokio-serde"
version = "0.6.1"
edition = "2018"
authors = [
    "Carl Lerche <me@carllerche.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Bastian Köcher <git@kchr.de>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["asynchronous", "encoding"]
keywords = ["async", "serde", "serialization"]
repository = "https://github.com/carllerche/tokio-serde"
homepage = "https://github.com/carllerche/tokio-serde"
documentation = "https://docs.rs/tokio-serde"
description = """
Send and receive Serde encodable types over the network using Tokio.

This library is used as a building block for serialization format specific
libraries.
"""

[dependencies]
bytes = "0.6"
derivative = { version = "2", optional = true }
futures = "0.3"
pin-project = "1"
serde = { version = "1", optional = true }
bincode-crate = { package = "bincode", version = "1", optional = true }
serde_json = { version = "1", optional = true }
rmp-serde = { version = "0.14", optional = true }
serde_cbor = { version = "0.11", optional = true }

[dev-dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["full"] }
static_assertions = "1.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
bincode = ["derivative", "serde", "bincode-crate"]
json = ["derivative", "serde", "serde_json"]
messagepack = ["derivative", "serde", "rmp-serde"]
cbor = ["derivative", "serde", "serde_cbor"]

[[example]]
name = "client"
required-features = ["bincode", "cbor", "json", "messagepack"]

[[example]]
name = "server"
required-features = ["bincode", "cbor", "json", "messagepack"]
